--- a/src/AspNetCore.Authentication.ExactOnline/project.json
+++ b/src/AspNetCore.Authentication.ExactOnline/project.json
@@ -4,26 +4,24 @@
     "joelharkes",
     "Trancon BV"
   ],
+  "iconUrl": "https://pbs.twimg.com/profile_images/517633696585633792/3LQk9h4x.png",
+  "projectUrl": "https://github.com/joelharkes/AspNetCore.Authentication.ExactOnline",
   "description": "Implementation of Microsoft.AspNetCore.Authentication for Exact online",
-  "PackOptions": {
-    "summary": "Implementation of Microsoft.AspNetCore.Authentication for Exact online",
-    "tags": [
-      "exact",
-      "exactonline",
-      "authentication",
-      "oauth"
-    ],
-    "owners": [
-      "joelharkes"
-    ],
-    "releaseNotes": "#1.0.0\n\n * initial releases",
-    "iconUrl": "https://pbs.twimg.com/profile_images/517633696585633792/3LQk9h4x.png",
-    "projectUrl": "https://github.com/joelharkes/AspNetCore.Authentication.ExactOnline",
-    "requireLicenseAcceptance": false,
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/joelharkes/AspNetCore.Authentication.ExactOnline"
-    }
+  "summary": "Implementation of Microsoft.AspNetCore.Authentication for Exact online",
+  "tags": [
+    "exact",
+    "exactonline",
+    "authentication",
+    "oauth"
+  ],
+  "owners": [
+    "joelharkes"
+  ],
+  "releaseNotes": "#1.0.0\n\n * initial releases",
+  "requireLicenseAcceptance": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joelharkes/AspNetCore.Authentication.ExactOnline"
   },
   "buildOptions": {
     "debugType": "portable"
@@ -34,8 +32,7 @@
   },
   "frameworks": {
     "netstandard1.3": {
-      "dependencies": {
-      }
+      "dependencies": {}
     }
   }
 }
