remove untested -& not working bits.

--- a/src/AspNetCore.Authentication.ExactOnline/project.json
+++ b/src/AspNetCore.Authentication.ExactOnline/project.json
@@ -31,11 +31,7 @@
     "Microsoft.AspNetCore.Authentication.OAuth": "1.0.0"
   },
   "frameworks": {
-    "netstandard1.3": {},
-    "net451": {
-      "dependencies": {
-        "System": "4.0.0"
-      }
+    "netstandard1.3": {}
     }
   }
 }
